--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://366576ae-f92e-4107-9996-1db6d0f06084.preview.emergentagent.com
 WDS_SOCKET_PORT=443
